Adds UI for stop rendering button

--- a/icg_project/index.html
+++ b/icg_project/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>ICG : Shadow Maps Viewer</title>
+	<title>ICG : Project Group 7</title>
 	<meta name="author" content="Krzysztof Lis">
 
 	<link rel="stylesheet" href="style.css">
@@ -29,6 +29,7 @@
 	<p id="view-options">
 		<span id="btn-preset-view" class="button">Preset view <strong class="keyboard">c</strong></span>
 		<span id="btn-pause" class="button">Pause <strong class="keyboard">p</strong></span>
+		<span id="btn-stop" class="button">Stop render <strong class="keyboard">s</strong></span>
 	</p>
 	
 	<pre id="debug-text"></pre>
