--- a/milestone_G17/proposal.html
+++ b/milestone_G17/proposal.html
@@ -41,7 +41,7 @@
 <p><img src="images/pretty_houses_world_1.png" width="450" alt="Pretty Houses in world 1" /> <img src="images/pretty_houses_world_2.png" width="450" alt="Pretty Houses in world 2" /></p>
 <h1 id="updated-schedule">Updated schedule</h1>
 <ul>
-<li><em>20/05/21</em>: We want to merge the WFC implementation with our tiles rendering.</li>
+<li><em>20/05/21</em>: We want to merge the WFC implementation with our tiles rendering. [We are struggling on that part with debugging, hopefully we’ll be able to parallelize for implementing bonuses while finishing debugging]</li>
 <li><em>25/05/21</em>: Start implementing the UI for letting user set constraints.</li>
 <li><em>27/05/21</em>: Finish implementing the UI and start Bezier camera paths.</li>
 <li><em>01/06/21</em>: Finish camera paths and record video.</li>
