Restores main script to be executed

--- a/icg_project/index.html
+++ b/icg_project/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 
-<!-- <script src="src/main.js" type="module" ></script> -->
-<script src="src/wfc/matching_sets.js" type="module" ></script>
+<script src="src/main.js" type="module" ></script>
+<!-- <script src="src/wfc/matching_sets.js" type="module" ></script> -->
 <!-- <script src="src/wfc/wave_function_collapse.js" type="module" ></script> -->
 <!-- <canvas id="plot"></canvas> -->
 <!-- regl will add its own full-screen canvas -->
