Implements quering the Java server to retrieve the tile set from WFC

--- a/icg_project/index.html
+++ b/icg_project/index.html
@@ -28,6 +28,7 @@
 		⁙⁙ scroll to zoom
 		⁙⁙ pause <strong class="keyboard">p</strong>
 		⁙⁙ hide <strong class="keyboard">h</strong>
+		⁙⁙ generate new houses <strong class="keyboard">g</strong>
 	</p>
 	<ul id="view-select">Focus:</ul>
 	<pre id="debug-text"></pre>
