--- a/icg_project/index.html
+++ b/icg_project/index.html
@@ -42,51 +42,66 @@
 		⁙⁙ 2D WFC hide <strong class="keyboard">w</strong>
 	</p>
 	<p id ="pos-tiles">
-		<button class="but1" name="button1">tile 1</button>
-		<button class="but1" name="button2">tile 2</button>
-		<button class="but1" name="button3">tile 3</button>
-		<button class="but1" name="button4">tile 4</button>
-		<button class="but1" name="button5">tile 5</button><br>
-		<button class="but1" name="button6">tile 6</button>
-		<button class="but1" name="button7">tile 7</button>
-		<button class="but1" name="button8">tile 8</button>
-		<button class="but1" name="button9">tile 9</button>
-		<button class="but1" name="button10">tile 10</button><br>
-		<button class="but1" name="button11">tile 11</button>
-		<button class="but1" name="button12">tile 12</button>
-		<button class="but1" name="button13">tile 13</button>
-		<button class="but1" name="button14">tile 14</button>
-		<button class="but1" name="button15">tile 15</button><br>
+		<input type= "checkbox" id= "but1" name="button1"><label>tile 1</label>>
+		<input type= "checkbox" id= "but1" name="button2"><label>tile 2</label>>
+		<input type= "checkbox" id= "but1" name="button3"><label>tile 3</label>>
+		<input type= "checkbox" id= "but1" name="button4"><label>tile 4</label>>
+		<input type= "checkbox" id= "but1" name="button5"><label>tile 5</label>><br>
+		<input type= "checkbox" id= "but1" name="button6"><label>tile 6</label>>
+		<input type= "checkbox" id= "but1" name="button7"><label>tile 7</label>>
+		<input type= "checkbox" id= "but1" name="button8"><label>tile 8</label>>
+		<input type= "checkbox" id= "but1" name="button9"><label>tile 9</label>>
+		<input type= "checkbox" id= "but1" name="button10"><label>tile 10</label><br>
+		<input type= "checkbox" id= "but1" name="button11"><label>tile 11</label>
+		<input type= "checkbox" id= "but1" name="button12"><label>tile 12</label>
+		<input type= "checkbox" id= "but1" name="button13"><label>tile 13</label>
+		<input type= "checkbox" id= "but1" name="button14"><label>tile 14</label>
+		<input type= "checkbox" id= "but1" name="button15"><label>tile 15</label><br>
 	</p>
 
 	<p id = "img-tiles">
-		<button class="but2" name="tile1"><img src="./img_2D/tile_1_right.png"/></button>
-		<button class="but2" name="tile2"><img src="./img_2D/tile_1_alone.png"/></button>
-		<button class="but2" name="tile3"><img src="./img_2D/tile_1_left.png"/></button>
-		<button class="but2" name="tile4"><img src="./img_2D/tile_1_right_nr.png"/></button>
-		<button class="but2" name="tile5"><img src="./img_2D/tile_1_middle_nr.png"/></button>
-		<button class="but2" name="tile6"><img src="./img_2D/tile_1_left_nr.png"/></button>
-		<button class="but2" name="tile7"><img src="./img_2D/tile_1_alone_nr.png"/></button><br>
-		<button class="but2" name="tile8"><img src="./img_2D/tile_1_middle.png"/></button>
-		<button class="but2" name="tile9"><img src="./img_2D/tile_2_alone_nr.png"/></button>
-		<button class="but2" name="tile10"><img src="./img_2D/tile_2_right_nr.png"/></button>
-		<button class="but2" name="tile11"><img src="./img_2D/tile_2_middle_nr.png"/></button>
-		<button class="but2" name="tile12"><img src="./img_2D/tile_2_left_nr.png"/></button>
-		<button class="but2" name="tile13"><img src="./img_2D/tile_3_left.png"/></button>
-		<button class="but2" name="tile14"><img src="./img_2D/tile_3_middle.png"/></button><br>
-		<button class="but2" name="tile15"><img src="./img_2D/tile_3_right.png"/></button>
-		<button class="but2" name="tile16"><img src="./img_2D/tile_3_left_nr.png"/></button>
-		<button class="but2" name="tile17"><img src="./img_2D/tile_3_middle_nr.png"/></button>
-		<button class="but2" name="tile18"><img src="./img_2D/tile_3_right_nr.png"/></button>
-		<button class="but2" name="tile19"><img src="./img_2D/tile_1_left_nb.png"/></button>
-		<button class="but2" name="tile20"><img src="./img_2D/tile_1_middle_nb.png"/></button>
-		<button class="but2" name="tile21"><img src="./img_2D/tile_1_right_nb.png"/></button><br>
+		<input type= "checkbox" id= "but2" name="tile1"><label><img src="./img_2D/tile_1_right.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile2"><label><img src="./img_2D/tile_1_alone.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile3"><label><img src="./img_2D/tile_1_left.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile4"><label><img src="./img_2D/tile_1_right_nr.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile5"><label><img src="./img_2D/tile_1_middle_nr.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile6"><label><img src="./img_2D/tile_1_left_nr.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile7"><label><img src="./img_2D/tile_1_alone_nr.png"/></label><br>
+		<input type= "checkbox" id= "but2" name="tile8"><label><img src="./img_2D/tile_1_middle.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile9"><label><img src="./img_2D/tile_2_alone_nr.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile10"><label><img src="./img_2D/tile_2_right_nr.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile11"><label><img src="./img_2D/tile_2_middle_nr.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile12"><label><img src="./img_2D/tile_2_left_nr.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile13"><label><img src="./img_2D/tile_3_left.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile14"><label><img src="./img_2D/tile_3_middle.png"/></label><br>
+		<input type= "checkbox" id= "but2" name="tile15"><label><img src="./img_2D/tile_3_right.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile16"><label><img src="./img_2D/tile_3_left_nr.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile17"><label><img src="./img_2D/tile_3_middle_nr.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile18"><label><img src="./img_2D/tile_3_right_nr.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile19"><label><img src="./img_2D/tile_1_left_nb.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile20"><label><img src="./img_2D/tile_1_middle_nb.png"/></label>
+		<input type= "checkbox" id= "but2" name="tile21"><label><img src="./img_2D/tile_1_right_nb.png"/></label><br>
 	</p>
 
 	<p id = "generate">
-		<button class="but3" name="generate">Generate Result</button><br>
+		<button type= "button" name="generate">Generate Result</button><br>
 	</p>
 </div>
 
+<div id= "generation">
+	<p id = "text-generation">
+		Result of generation
+		⁙⁙ restart <strong class="keyboard">r</strong>
+	</p>
+	<p><img src="./img_2D/tile_1_right_nb.png"/></p>
+</div>
+
+<div id= "error-message">
+	<p id = "text-error">
+		Error 
+		⁙⁙ You have to choose only one tile and position
+		⁙⁙ restart <strong class="keyboard">r</strong>
+	</p>
+</div>
 </body>
 </html>
