Prepares the handin html and txt files

--- a/icg_project/handin/index.html
+++ b/icg_project/handin/index.html
@@ -16,6 +16,24 @@
 
 	<h2>Technical approach</h2>
 	<p>TODO</p>
+
+	<h3>Wave Function Collapse in Java</h3>
+	<h4>Java model</h4>
+	<h4>Sockets matching</h4>
+	<h4>Client Server Architecture</h4>
+	<h4>Constrained computation</h4>
+
+	<h3>Tiles design</h3>
+
+	<h3>Tiles rendering</h3>
+
+	<h3>Bézier curves camera paths</h3>
+
+	<h3>User Interface</h3>
+	<h4>Tile selection</h4>
+	<h4>Constraints setting</h4>
+
+
 	<code>Useful to write code</code>
 	<video class="vid" loop autoplay muted src="media/magicavoxel_test.mp4" width="60%"></video>
 
@@ -25,6 +43,8 @@
 	</pre>
 
 	<h2>Results</h2>
+	<h3>Optimization possibilities</h3>
+	<h3>How to launch the project</h3>
 	<p>TODO</p>
 	<iframe src="project.html" style="height:700px;width:1000px; margin:auto; display:block;">
 		<script src="./src/main.js" defer="true"></script>
