Creates an abstract

--- a/icg_project/handin/index.html
+++ b/icg_project/handin/index.html
@@ -12,7 +12,7 @@
 	<p class="group17">A project by Emmanuelle Denove, Louise Rieupouilh and Tom Demont</p>
 
 	<h2>Abstract</h2>
-	<p>TODO</p>
+	<p>In Pretty Houses Generator, we wanted to create an app showing various tiles layout in a 3D world that are matching nicely with each other. The main part was the implementation of a Wave Collapse Function to output a valid layout of the tiles we created. We also wanted the app to be interactive to let the user discover and appreciate a visually appealing layout while having a hand on its creation.</p>
 
 	<h2>Technical approach</h2>
 	<p>TODO</p>
