--- a/icg_project/handin/index.html
+++ b/icg_project/handin/index.html
@@ -29,6 +29,21 @@
 	<h3>Tiles design</h3>
 
 	<h3>Tiles rendering</h3>
+		For the rendering of the tiles, we used MagicaVoxel, which was provided to us by the TAs. 
+		It was really fun and easy to use and it allowed us to create tiles in 3D for our project. All the tiles and the floor were made
+		by us and so we had to pay attention when creating a new tile to how it was going to fit the others.
+		We created tiles with roof, no roof, with door when the tile was put on the floor, no door and different positions (middle, left, right, corner).
+		This allowed us to have a lot of different possibilities when using the wave collapse function to build a great variety of buildings.
+		<p style="text-align: center;"><img src="media/pretty_balcony.PNG" width="50%"><br>
+			creation of the balcony
+		</p>
+		<p style="text-align: center;"><img src="media/alone_house.PNG" width="50%"><br>
+			base tile, first tile we created
+		</p>
+		<p style="text-align: center;"><img src="media/left_nr.PNG" width="50%"><br>
+			variation of tile, no roof, getting attached to the left
+		</p>
+
 	<h4>Actors model</h4>
 	<p>For the rendering of our tiles, we created the file <code>tiles.js</code> where we took the basis of the
 		<code>planets.js</code> actors modelization. We could get rid of the physical (orbit, speed, size) aspects as we
@@ -99,6 +114,9 @@
 	<h3>Bézier curves camera paths</h3>
 
 	<h3>User Interface</h3>
+		To create the user interface used when setting constraints (pressing w), we used html and css. We wanted it to be 
+		as easy as possible for the user to set constraints, so we implemented checkboxes which allow to choose a position on the grid
+		and the tile you want to see at this position. 
 	<h4>Tile selection</h4>
 	<h4>Constraints setting</h4>
 
